# backlog-mcp

./: README.md
backlog-client/: README.md  openapi.yaml
backlog-client/src/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
backlog-client/src/.openapi-generator/: FILES
backlog-client/src/backlog_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
backlog-client/src/docs/: AddCustomField200Response.md  AddCustomFieldListItem200Response.md  AddCustomFieldRequestMax.md  AddCustomFieldRequestMin.md  AddIssueComment201Response.md  AddIssueCommentNotification200Response.md  AddIssueCommentNotification200ResponseNotificationsInner.md  AddProject201Response.md  AddProjectCategory200Response.md  AddRecentlyViewedIssue200Response.md  AddRecentlyViewedWiki200Response.md  AddRecentlyViewedWiki200ResponseAttachmentsInner.md  AddWatching201Response.md  AddWatching201ResponseIssue.md  AddWikiAttachment200ResponseInner.md  CreateIssue201Response.md  CreateIssue201ResponseAssignee.md  CreatePullRequest200Response.md  CreatePullRequest200ResponseAssignee.md  CreateWiki201Response.md  DefaultApi.md  DeleteCategory200Response.md  DeleteCustomFieldListItem200Response.md  DeleteIssueComment200Response.md  DeleteIssueType200Response.md  DeleteProject200Response.md  DeleteProjectStatus200Response.md  DeletePullRequestAttachment200Response.md  DeleteVersion200Response.md  DeleteWatching200Response.md  DeleteWatching200ResponseIssue.md  GetActivity200Response.md  GetActivity200ResponseContent.md  GetActivity200ResponseContentChangesInner.md  GetActivity200ResponseContentComment.md  GetActivity200ResponseNotificationsInner.md  GetCustomFields200ResponseInner.md  GetCustomFields200ResponseInnerItemsInner.md  GetGitRepository200Response.md  GetGitRepository200ResponseCreatedUser.md  (+95 more)
backlog-client/src/test/: test_add_custom_field200_response.py  test_add_custom_field_list_item200_response.py  test_add_custom_field_request_max.py  test_add_custom_field_request_min.py  test_add_issue_comment201_response.py  test_add_issue_comment_notification200_response.py  test_add_issue_comment_notification200_response_notifications_inner.py  test_add_project201_response.py  test_add_project_category200_response.py  test_add_recently_viewed_issue200_response.py  test_add_recently_viewed_wiki200_response.py  test_add_recently_viewed_wiki200_response_attachments_inner.py  test_add_watching201_response.py  test_add_watching201_response_issue.py  test_add_wiki_attachment200_response_inner.py  test_create_issue201_response.py  test_create_issue201_response_assignee.py  test_create_pull_request200_response.py  test_create_pull_request200_response_assignee.py  test_create_wiki201_response.py  test_default_api.py  test_delete_category200_response.py  test_delete_custom_field_list_item200_response.py  test_delete_issue_comment200_response.py  test_delete_issue_type200_response.py  test_delete_project200_response.py  test_delete_project_status200_response.py  (+108 more)
mcp-server/: annot.py  hello.py  pyproject.toml
mcp-server/mcp_server/: main.py  mcp.py
scraper/: .gitignore  README.md  convert_to_markdown.py  main.py  merged_openapi.yaml  pyproject.toml
scraper/backlog_scraper/: __init__.py  markdown_to_openapi.py  openapi_merger.py  scraper.py
scraper/backlog_scraper/api/: metadata.json
(+138 files in other folders)
