[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = ["techan <50950268+te-chan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
backlog-client = {path = "../backlog-client/src"}
mcp = {version = "1.2.0rc1", extras = ["cli"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
