[project]
name = "backlog-scraper"
version = "0.1.0"
description = "Scraper for Backlog API documentation"
authors = [
    { name = "Techan" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pyyaml>=6.0.2",
    "anthropic>=0.42.0",
    "markdown>=3.7"
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
